# FireDataWebService

./: .env.example  Dockerfile  FireDataWebService.csproj  Program.cs  README.md  appsettings.json  main.py  pyproject.toml
AppStart/: StartUp.cs
Controllers/: FiresController.cs  HomeController.cs  WeatherController.cs
Domain/Models/: FireDataModel.cs  WeatherDataModel.cs
Domain/Repositories/: IFireRepository.cs  IWeatherRepository.cs
FireDataWebService/: FireDataWebService.sln
FireDataWebService/Properties/: launchSettings.json
Infrastructure/InMemoryStorage/: FireInMemoryStorage.cs  WeatherInMemoryStorage.cs
Infrastructure/Mappers/: FireDataMapper.cs  WeatherDataMapper.cs
Infrastructure/Repositories/: FireRepository.cs  WeatherRepository.cs
Properties/: launchSettings.json
Views/Home/: Index.cshtml  _Layout.cshtml
data/data/: MO_Irk_region.csv
data/weather/prec/irk/: prec_06_irk.tif  prec_07_irk.tif  prec_08_irk.tif
src/: __init__.py
src/config/: EnvConfig.py  startup.py
src/data/mappers/: WeatherDataMapper.py
src/data/repositories/: FiresDataRepository.py  WeatherDataRepository.py
src/data/storages/: FiresDataInMemoryStorage.py  WeatherDataInMemoryStorage.py
src/domain/models/: WeatherDataModel.py
src/routers/: __init__.py  data.py  index.py
templates/: index.html
wwwroot/Data/: regions.geojson
wwwroot/Scripts/: load-fires-and-weather.js  load-geojson.js  load-tif.js  parse-url.js
wwwroot/Style/: main.css
