[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Fedor Kuznetsov <kuzneczov-f@susanoo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rasterio = "^1.3.9"
matplotlib = "^3.8.3"
geopandas = "^0.14.3"
flask = "^3.0.2"
dash = "^2.15.0"
plotly = "^5.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
